--- a/index.html
+++ b/index.html
@@ -3,30 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Gify Api</title>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
 <body>
     <!---Buttons-->
     <div id="buttons-view">
-    <button class="btn btn-info" data-person= "Aladdin"> Aladdin</button> 
-    <button class="btn btn-info" data-person="Moana">Moana</button>
-    <button class="btn btn-info" data-person="Nemo">Finding Nemo</button>
-    <button class="btn btn-info" data-person="Simba">Lion King</button>
-    <button class="btn btn-info" data-person="Monsters Inc"> Monsters Inc</button>
-    <button class="btn btn-info" data-person="Toy Story"> Toy Story</button>
-    <button class="btn btn-info" data-person="The Incredibles"> The Incredibles</button>
-    <button class="btn btn-info" data-person="Tarzan"> Tarzan</button>
-    <button class="btn btn-info" data-person="101 Dalmations"> 101 Dalmations</button>
-
-
-
-</div>  <!---End of Buttons Div-->
-
-<!------Where the Gifs will Appear-->
+    
+    <!------Where the Gifs will Appear-->
 <div id="gifs-appear-here">
 </div>
+<!---this is where Ratings will appear-->
+<div id="ratings"></div>
 <!--------------------------------New div to seperate -------------------------------------------------->
 <div id="container">
 <form id="movie-form">
@@ -34,11 +24,45 @@
         <input type="text" id="movie-input"><br>
   
  <!-- Button triggers new movie to be added -->
-        <input id="add-movie" type="submit" value="Add a Movie, Yo!">
+        <input id="add-movie" class="btn btn-info" type="submit" value="Add another Disney Movie!">
       </form>
 </div> <!---End of Container Div-->
 
-   
+<!---------------------------------JavaScript and Jquery Begins---------------------------------------------------------------------->  
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script type="text/javascript">
+//array
+
+var disneyMovies = ["Aladdin","Moana","Finding Nemo","Lion King","Monsters Inc.","Toy Story","The Incredibles","Tarzan","101 Dalmations",]
+var disneyImage
+
+
+
+
+//Button Click for Each Gif
+$('button').on("click",function() {
+    var disneyMovie = $(this).attr('data-person');
+    var queryURL = "https://api.giphy.com/v1/gifs/search?q=" + disneyMovie + "&api_key=BQ7nmGOxVBdNtnmUv2DvrJkxQjlMtQ4q";
+//ajax call
+    $.ajax({
+        url: queryURL,
+        method: "GET"
+    })
+//returns a promise
+    .then(function(repsonse){
+        console.log(response);
+
+
+    });
+    
+
+
+});
+
+//Button Click for Submit Button
+
+</script> 
+
 <!----BootStrap Links -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
